--- a/client/package.json
+++ b/client/package.json
@@ -4,7 +4,8 @@
   "private": true,
   "proxy": "http://localhost:3001/",
   "dependencies": {
-"@apollo/client": "^3.3.16",
+    "@apollo/client": "^3.3.16",
+    "@stripe/stripe-js": "^1.38.1",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
@@ -14,7 +15,8 @@
     "react-dom": "^17.0.2",
     "react-router-dom": "^6.2.1",
     "react-scripts": "4.0.3",
-    "web-vitals": "^1.0.1"  },
+    "web-vitals": "^1.0.1"
+  },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
